# ipiped

./: .gitignore  COPYING  Makefile.am  Makefile.in  README  aclocal.m4  com.ridgerun.ipiped.service.in  configure  configure.ac  index.html  ipiped-1.1.pc.in  test.txt
_posts/: 2011-04-24-Initial-code-is-available.markdown
autom4te.cache/: output.0  output.1  output.2  output.5  output.7  requests  traces.0  traces.1  traces.2  traces.5  traces.7
config/: dm365_mt9p011_config  dm365_mt9p031_config  ipiped.conf
src/: AbstcCliRegister.c  AbstcCliRegister.vala  AbstcSensor.c  AbstcSensor.vala  AbstcVideoProcessor.c  AbstcVideoProcessor.vala  Makefile.am  Makefile.in  cli_dm365ipipe.c  cli_dm365ipipe.vala  cli_mt9p031.c  cli_mt9p031.vala  cli_sensor.vala  com.ridgerun.ipiped.IpipeInterface.xml  command.c  command.vala  ipipe-client.c  ipipe-client.vala  ipiped-dm365.c  ipiped-dm365.vala  ipiped-mt9p031.c  ipiped-mt9p031.vala  ipiped.c  ipiped.vala  main.c  main.vala
vapi/: dm365aew.vapi  impprev.vapi
